# nih-plug

./: Cargo.toml
nih_plug_egui/: Cargo.toml
nih_plug_egui/src/widgets/: param_slider.rs
