[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
nih_plug = { path = "..", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3" }
crossbeam = "0.8"
# egui-baseview = { git = "https://github.com/timboudreau/egui-baseview.git", rev = "93fe34540da3303a1daf67a3c6e526b0047d8a27" }

egui-baseview = { path = "../../egui-baseview" } #Git submodule path, non-portble

parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
